// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Progress 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-line"
    >
      <div
        class="cxd-Progress-line-inter"
      >
        <div
          class="cxd-Progress-line-bar bg-info"
          style="width: 60%;"
          title="60%"
        />
      </div>
    </div>
    <span
      class="cxd-Progress-line-text"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          60%
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:Progress as form item 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="progress"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  进度
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <div
                class="cxd-Progress"
              >
                <div
                  class="cxd-Progress-line"
                >
                  <div
                    class="cxd-Progress-line-inter"
                  >
                    <div
                      class="cxd-Progress-line-bar bg-success"
                      style="width: 61%;"
                      title="61%"
                    />
                  </div>
                </div>
                <span
                  class="cxd-Progress-line-text"
                >
                  <span
                    class="cxd-TplField fr-view"
                  >
                    <span>
                      61%
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Progress with map 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-line"
    >
      <div
        class="cxd-Progress-line-inter"
      >
        <div
          class="cxd-Progress-line-bar"
          style="width: 60%; background-color: rgb(249, 109, 62);"
          title="60%"
        />
      </div>
    </div>
    <span
      class="cxd-Progress-line-text"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          60%
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:Progress with mode 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-circle"
      style="width: 80px; height: 80px;"
    >
      <svg
        class="bg-success-circle"
        role="presentation"
        style="width: 80px; height: 80px;"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="bg-success-circle-trail"
          cx="0"
          cy="0"
          r="46"
          stroke="#D9D9D9"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke: #D9D9D9; stroke-dasharray: 289.02652413026095px 289.02652413026095; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="bg-success-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="46"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095; stroke-dashoffset: 110.93981392819656; transform: rotate(-90deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
      <span
        class="cxd-Progress-circle-text"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            63%
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Renderer:Progress with mode 2`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-circle"
      style="width: 80px; height: 80px;"
    >
      <svg
        class="bg-success-circle"
        role="presentation"
        style="width: 80px; height: 80px;"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="bg-success-circle-trail"
          cx="0"
          cy="0"
          r="46"
          stroke="#D9D9D9"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke: #D9D9D9; stroke-dasharray: 208.7413785385218px 289.02652413026095; stroke-dashoffset: 0; transform: rotate(230deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="bg-success-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="46"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke-dasharray: 208.7413785385218px 289.02652413026095; stroke-dashoffset: 79.14689627386784; transform: rotate(230deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
      <span
        class="cxd-Progress-circle-text"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            64%
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Renderer:Progress with stripe & animate 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-line"
    >
      <div
        class="cxd-Progress-line-inter"
      >
        <div
          class="cxd-Progress-line-bar bg-success cxd-Progress-line-bar--stripe cxd-Progress-line-bar--stripe-animate"
          style="width: 62%;"
          title="62%"
        />
      </div>
    </div>
    <span
      class="cxd-Progress-line-text"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          62%
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:Progress with threshold & showThresholdText 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-line"
    >
      <div
        class="cxd-Progress-line-threshold"
        style="left: 30%; border-color: red;"
      >
        <span
          class="cxd-Progress-line-threshold-text"
        >
          30%
        </span>
      </div>
      <div
        class="cxd-Progress-line-threshold"
        style="left: 90%; border-color: blue;"
      >
        <span
          class="cxd-Progress-line-threshold-text"
        >
          90%
        </span>
      </div>
      <div
        class="cxd-Progress-line-inter"
      >
        <div
          class="cxd-Progress-line-bar bg-info"
          style="width: 60%;"
          title="60%"
        />
      </div>
    </div>
    <span
      class="cxd-Progress-line-text"
    >
      <span
        class="cxd-TplField fr-view"
      >
        <span>
          60%
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:Progress with valueTpl 1`] = `
<div>
  <div
    class="cxd-Progress"
  >
    <div
      class="cxd-Progress-circle"
      style="width: 80px; height: 80px;"
    >
      <svg
        class="bg-success-circle"
        role="presentation"
        style="width: 80px; height: 80px;"
        viewBox="-50 -50 100 100"
      >
        <circle
          class="bg-success-circle-trail"
          cx="0"
          cy="0"
          r="46"
          stroke="#D9D9D9"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke: #D9D9D9; stroke-dasharray: 289.02652413026095px 289.02652413026095; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="bg-success-circle-path"
          cx="0"
          cy="0"
          opacity="1"
          r="46"
          stroke-linecap="round"
          stroke-width="8"
          style="stroke-dasharray: 289.02652413026095px 289.02652413026095; stroke-dashoffset: 99.37875296298611; transform: rotate(-90deg); transform-origin: 0 0; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
      <span
        class="cxd-Progress-circle-text"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            67个
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;
